--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,11 +39,25 @@ nav li {
 
 nav a {
     text-decoration: none;
+    font-size: 30px;
     color: #333333;
 }
 
 nav a:hover, .active {
     border-bottom: 1px solid #333333;
+}
+
+/* ---------------------------- Drone images */
+
+#drone-images {
+    clear: both;
+}
+
+/* ---------------------------- About */
+
+.about {
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 
 /* ---------------------------- Footer */
@@ -66,6 +80,7 @@ footer li {
 footer a {
     text-decoration: none;
     color: #333333;
+    font-size: 25px;
 }
 
 footer a:hover {
@@ -74,7 +89,7 @@ footer a:hover {
 
 /* ---------------------------- Spacing */
 
-#page-spacing-top, #page-spacing-bottom {
+#page-spacing-top, #page-spacing-middle, #page-spacing-bottom {
     height: 75px;
     width: 100%;
 }
@@ -90,4 +105,38 @@ footer a:hover {
 .drone-images {
     width: 100%;
     height: auto;
+}
+
+/* ---------------------------- Media Queries */
+
+@media only screen and (max-width: 1300px) {
+    nav li {
+        margin-right: 25px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    header h2 {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 865px) {
+    header {
+        height: 180px;
+        line-height: 90px;
+    }
+
+    #logo-image {
+        height: 50px;
+        width: 50px;
+    }
+
+    nav {
+        float: left;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+
 }
