--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,15 @@ body {
 
 header {
     height: 90px;
-    line-height: 90px;
+    line-height: 85px;
     width: 100%;
     background-color: white;
-    border-bottom: 1px solid #333333;
+    border-bottom: 2px solid #333333;
+}
+
+#logo-image {
+    border: 2px solid #333333;
+    border-radius: 10%;
 }
 
 #logo-image-link {
@@ -22,6 +27,7 @@ header h2 {
     display: inline-block;
     font-size: 50px;
     margin: auto;
+    vertical-align: middle;
 }
 
 nav {
@@ -47,29 +53,41 @@ nav a:hover, .active {
     border-bottom: 1px solid #333333;
 }
 
-/* ---------------------------- Drone images */
-
-#drone-images {
-    clear: both;
-}
-
 /* ---------------------------- About */
 
 .about {
     margin-left: 5vw;
     margin-right: 5vw;
+    text-align: center;
+}
+
+.about h3 {
+    border-bottom: 1px solid #333333;
+    width: auto;
+}
+
+.about p {
+    padding-bottom: 30px;
+}
+
+#join-button-container {
+    text-align: center;
 }
 
 /* ---------------------------- Footer */
 
 footer {
     height: 90px;
-    line-height: 90px;
+    line-height: 85px;
     width: 100%;
     background-color: white;
-    border-top: 1px solid #333333;
+    border-top: 2px solid #333333;
     display: flex;
     justify-content: center;
+}
+
+footer ul {
+    padding: 0;
 }
 
 footer li {
@@ -89,8 +107,8 @@ footer a:hover {
 
 /* ---------------------------- Spacing */
 
-#page-spacing-top, #page-spacing-middle, #page-spacing-bottom {
-    height: 75px;
+#page-spacing-middle, #page-spacing-bottom {
+    height: 50px;
     width: 100%;
 }
 
@@ -105,26 +123,95 @@ footer a:hover {
 .drone-images {
     width: 100%;
     height: auto;
+    clear: both;
+    margin-bottom: 10px;
+}
+
+#tall-image {
+    display: none;
+}
+
+.center-image {
+    text-align: center;
 }
 
 /* ---------------------------- Media Queries */
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1400px) {
     nav li {
         margin-right: 25px;
     }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1200px) {
     header h2 {
         font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    #tall-image {
+        display: block;
+    }
+
+    #wide-image {
+        display: none;
+    }
+
+    nav {
+        text-align: center;
+    }
+
+    .about p {
+        margin-bottom: 0;
+    }
+
+    #page-spacing-top, #page-spacing-middle {
+        height: 20px;
+    }
+
+    .footer-link-text {
+        display: none;
     }
 }
 
 @media only screen and (max-width: 865px) {
     header {
         height: 180px;
-        line-height: 90px;
+        line-height: 85px;
+    }
+
+    #logo-image {
+        height: 50px;
+        width: 50px;
+    }
+
+    #tall-image {
+        display: block;
+    }
+
+    #wide-image {
+        display: none;
+    }
+
+    nav {
+        float: left;
+        text-align: center;
+    }
+
+    #page-spacing-top, #page-spacing-middle {
+        height: 20px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    header {
+        height: 120px;
+        line-height: 55px;
+    }
+
+    header h2 {
+        font-size: 22px;
     }
 
     #logo-image {
@@ -135,8 +222,12 @@ footer a:hover {
     nav {
         float: left;
     }
-}
 
-@media only screen and (max-width: 768px) {
+    nav a {
+        font-size: 15px;
+    }
 
+    footer li {
+        margin: 0 15px;
+    }
 }
