--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,40 @@ nav a:hover, .active {
     text-align: center;
 }
 
+.btn-secondary-bg-color {
+    background-color: #333333;
+}
+
+/* ---------------------------- Events */
+
+#events {
+    text-align: center;
+}
+
+#events h3 {
+    margin-bottom: 2px;
+}
+
+#events h4 {
+    margin-bottom: 25px;
+}
+
+#events h5 {
+    text-decoration: underline;
+}
+
+.events-background-wrapper {
+    background-color: rgba(51,51,51,0.2);
+    border: 1px solid #333333;
+}
+
+.holiday-background {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    color: white;
+    background-color: #C30F16;
+}
+
 /* ---------------------------- Footer */
 
 footer {
@@ -109,6 +143,11 @@ footer a:hover {
 
 #page-spacing-middle, #page-spacing-bottom {
     height: 50px;
+    width: 100%;
+}
+
+.page-spacing-events {
+    height: 12px;
     width: 100%;
 }
 
