--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,13 @@ nav a:hover, .active {
 
 #events {
     text-align: center;
+    color: #dddddd;
 }
 
 #events h3 {
-    margin-bottom: 2px;
+    margin-top: 20px;
+    margin-bottom: 1px;
+    color: #333333;
 }
 
 #events h4 {
@@ -95,15 +98,36 @@ nav a:hover, .active {
 #events h5 {
     text-decoration: underline;
 }
+#events h5, #events h6, #events p {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.events-page-title-container {
+    color: #333333;
+    font-size: 22px;
+    margin-top: 0;
+}
+
+.events-title-container {
+    margin-top: 1rem;
+}
+
+.events-background-image-container {
+    background-image: url("../images/events-background-image.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 
 .events-background-wrapper {
-    background-color: rgba(51,51,51,0.2);
-    border: 1px solid #333333;
+    background-color: rgba(15,15,15,0.7);
+    border-top: 1px solid #111111;
+    border-bottom: 1px solid #111111;
 }
 
 .holiday-background {
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border: 1px solid white;
     color: white;
     background-color: #C30F16;
 }
@@ -147,7 +171,12 @@ footer a:hover {
 }
 
 .page-spacing-events {
-    height: 12px;
+    height: 20px;
+    width: 100%;
+}
+
+.page-spacing-events-bottom {
+    height: 40px;
     width: 100%;
 }
 
