--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,9 @@ body {
 
 header {
     height: 90px;
-    line-height: 85px;
     width: 100%;
     background-color: white;
     border-bottom: 2px solid #333333;
-}
-
-#logo-image {
-    border: 2px solid #333333;
-    border-radius: 10%;
 }
 
 #logo-image-link {
@@ -25,22 +19,32 @@ header {
 
 header h2 {
     display: inline-block;
-    font-size: 50px;
+    font-size: 48px;
     margin: auto;
     vertical-align: middle;
 }
 
-nav {
-    float: right;
+.header-left {
+    text-align: left;
+    line-height: 85px;
+}
+
+.header-right {
+    text-align: right;
 }
 
 nav ul {
     margin: 0;
+    padding: 0;
+    line-height: 85px;
 }
 
 nav li {
     display: inline-block;
-    margin-right: 75px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 nav a {
@@ -139,6 +143,35 @@ nav a:hover, .active {
     height: auto;
 }
 
+/* ---------------------------- Join */
+
+.join-background-image {
+    background-image: url("../images/join-img.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+}
+
+#join h3 {
+    margin-bottom: 50px;
+}
+
+.join-left {
+    text-align: right;
+    margin-right: 5px
+}
+
+.join-right {
+    text-align: left;
+    margin-left: 5px;
+}
+
+form button {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 /* ---------------------------- Footer */
 
 footer {
@@ -183,22 +216,36 @@ footer a:hover {
 }
 
 .page-spacing-events-bottom {
-    height: 40px;
+    height: 70px;
+    width: 100%;
+}
+
+.page-spacing-join {
+    height: 20vh;
+    width: 100%;
+}
+
+.page-spacing-join-middle {
+    height: 30px;
+    width: 100%;
+}
+
+.page-spacing-join-bottom {
+    height: 50vh;
     width: 100%;
 }
 
 /* ---------------------------- Images */
 
 #logo-image {
-    height: 75px;
-    width: 75px;
+    height: 55px;
+    width: 55px;
     margin: 4px;
 }
 
 .drone-images {
     width: 100%;
     height: auto;
-    clear: both;
     margin-bottom: 10px;
 }
 
@@ -213,14 +260,17 @@ footer a:hover {
 /* ---------------------------- Media Queries */
 
 @media only screen and (max-width: 1400px) {
-    nav li {
-        margin-right: 25px;
-    }
+
 }
 
 @media only screen and (max-width: 1200px) {
     header h2 {
-        font-size: 30px;
+        font-size: 35px;
+    }
+
+    #logo-image {
+        height: 40px;
+        width: 40px;
     }
 }
 
@@ -233,7 +283,16 @@ footer a:hover {
         display: none;
     }
 
-    nav {
+    header {
+        height: 150px;
+        line-height: 85px;
+    }
+
+    header ul {
+        line-height: 40px;
+    }
+
+    .header-left, .header-right {
         text-align: center;
     }
 
@@ -251,15 +310,6 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 865px) {
-    header {
-        height: 180px;
-        line-height: 85px;
-    }
-
-    #logo-image {
-        height: 50px;
-        width: 50px;
-    }
 
     #tall-image {
         display: block;
@@ -269,11 +319,6 @@ footer a:hover {
         display: none;
     }
 
-    nav {
-        float: left;
-        text-align: center;
-    }
-
     #page-spacing-top, #page-spacing-middle {
         height: 20px;
     }
@@ -281,8 +326,12 @@ footer a:hover {
 
 @media only screen and (max-width: 576px) {
     header {
-        height: 120px;
-        line-height: 55px;
+        height: 90px;
+        line-height: 40px;
+    }
+
+    .header-left {
+        line-height: 40px;
     }
 
     header h2 {
@@ -290,12 +339,8 @@ footer a:hover {
     }
 
     #logo-image {
-        height: 50px;
-        width: 50px;
-    }
-
-    nav {
-        float: left;
+        height: 26px;
+        width: 26px;
     }
 
     nav a {
