--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #dddddd;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* ---------------------------- Header/Nav */
@@ -99,6 +100,10 @@ nav a:hover, .active {
     text-align: right;
 }
 
+#join-button {
+    font-size: 22px;
+}
+
 /* ---------------------------- Events */
 
 #events {
@@ -170,7 +175,15 @@ nav a:hover, .active {
 }
 
 #join h3 {
+    font-size: 40px;
     margin-bottom: 50px;
+    width: auto;
+}
+
+.join-background-opacity-layer {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(221,221,221,0.2)
 }
 
 .join-left {
@@ -186,6 +199,10 @@ nav a:hover, .active {
 form button {
     margin-left: 5px;
     margin-right: 5px;
+}
+
+form label {
+    font-weight: bold;
 }
 
 /* ---------------------------- Footer */
@@ -237,7 +254,7 @@ footer a:hover {
 }
 
 .page-spacing-join {
-    height: 20vh;
+    height: 15vh;
     width: 100%;
 }
 
@@ -247,7 +264,7 @@ footer a:hover {
 }
 
 .page-spacing-join-bottom {
-    height: 50vh;
+    height: 40vh;
     width: 100%;
 }
 
@@ -259,7 +276,7 @@ footer a:hover {
     margin: 4px;
 }
 
-#wales-img {
+.about-img {
     height: 150px;
     width: 150px;
     border: 1px solid #333333;
