--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,7 @@ footer a:hover {
     height: 55px;
     width: 55px;
     margin: 4px;
+    margin-left: 12px;
 }
 
 .about-img {
@@ -330,6 +331,10 @@ footer a:hover {
     header {
         height: 150px;
         line-height: 85px;
+    }
+
+    #logo-image {
+        margin-left: 0;
     }
 
     header ul {
