--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,9 +159,17 @@ nav a:hover, .active {
 
 /* ---------------------------- Gallery */
 
+/* Masonry styling of gallery images taken from Code Institute Love Running HTML/CSS project */
+
+#gallery {
+    clear: both;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0px;
+}
+
 #gallery img {
     width: 100%;
-    height: auto;
 }
 
 /* ---------------------------- Join */
@@ -317,6 +325,13 @@ footer a:hover {
         height: 40px;
         width: 40px;
     }
+
+    #gallery {
+        clear: both;
+        line-height: 0;
+        column-count: 3;
+        column-gap: 0px;
+    }
 }
 
 @media only screen and (max-width: 992px) {
@@ -371,6 +386,13 @@ footer a:hover {
     #page-spacing-top, #page-spacing-middle {
         height: 20px;
     }
+
+    #gallery {
+        clear: both;
+        line-height: 0;
+        column-count: 2;
+        column-gap: 0px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
@@ -398,5 +420,12 @@ footer a:hover {
 
     footer li {
         margin: 0 15px;
+    }
+
+    #gallery {
+        clear: both;
+        line-height: 0;
+        column-count: 1;
+        column-gap: 0px;
     }
 }
