Nearly finish README.md, add notes to html pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ footer a:hover {
 }
 
 .page-spacing-join {
-    height: 15vh;
+    height: 18vh;
     width: 100%;
 }
 
@@ -312,8 +312,14 @@ footer a:hover {
 
 /* ---------------------------- Media Queries */
 
-@media only screen and (max-width: 1400px) {
+@media only screen and (min-width: 1921px) {
+    .page-spacing-join {
+        height: 20vh;
+    }
 
+    .page-spacing-join-bottom {
+        height: 50vh;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
